--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: geoflutterfire2
 description: GeoFlutterFire2 is an open-source library that allows you to store and query firestore documents based on their geographic location.
 version: 2.3.15
-homepage: https://github.com/beerstorm-net/geoflutterfire2
+homepage: https://github.com/KumaloWilson/GeoFlutterFire2
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: "^3.6.0"
 
 dependencies:
   flutter:
